Cleaned up, removed Role from User and updated token management request object